# MyBlog

./: .gitignore  README.md  dump-postgres-202303200125.sql  pyproject.toml
comments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py
my_blog/: settings.py  urls.py
posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
